--- a/MWP3_2C1 - Stonogi.cbp
+++ b/MWP3_2C1 - Stonogi.cbp
@@ -33,10 +33,10 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
+		<Unit filename="printraport/printraport.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="printraport/printraport.h" />
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
