--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,28 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "editor.inlineSuggest.enabled": true,
+    "editor.inlayHints.enabled": "off",
+    "javascript.inlayHints.parameterNames.suppressWhenArgumentMatchesName": false,
+    "typescript.inlayHints.parameterNames.suppressWhenArgumentMatchesName": false,
+    "C_Cpp.inlayHints.parameterNames.suppressWhenArgumentContainsName": false,
+    "C_Cpp.inlayHints.parameterNames.hideLeadingUnderscores": false,
+    "workbench.editor.languageDetectionHints": {
+        "untitledEditors": false,
+        "notebookEditors": false
+    },
+    "editor.parameterHints.enabled": false,
+    "editor.suggest.showCustomcolors": false,
+    "editor.suggest.showTypeParameters": false,
+    "editor.suggest.showReferences": false,
+    "editor.suggest.showEnumMembers": false,
+    "html.suggest.html5": false,
+    "editor.suggest.showClasses": false,
+    "editor.suggest.showDeprecated": false,
+    "editor.suggest.showFields": false,
+    "editor.suggest.showKeywords": false,
+    "editor.suggest.showProperties": false,
+    "editor.suggest.showStructs": false,
+    "editor.suggest.showVariables": false
 }
